News UAT/force-app/main/default/objects/Survey_Question__c/Survey_Question__c.object-meta.xml
<CustomObject>
    <label>Survey Question</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>