News UAT/force-app/main/default/objects/Survey_Question__c/fields/ComplianceQuestion__c.field-meta.xml
<CustomField>
    <fullName>ComplianceQuestion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Compliance Question</label>
    <type>Checkbox</type>
</CustomField>