News UAT/force-app/main/default/objects/Survey_Question__c/fields/Max_Weight__c.field-meta.xml
<CustomField>
    <fullName>Max_Weight__c</fullName>
    <label>Maximum Weight</label>
    <summarizedField>Survey_Question_Choice__c.Weight__c</summarizedField>
    <summaryForeignKey>Survey_Question_Choice__c.Survey_Question__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>