News UAT/force-app/main/default/objects/Survey_Question__c/fields/SurveySection__c.field-meta.xml
<CustomField>
    <fullName>SurveySection__c</fullName>
    <description>List of survey options</description>
    <label>Survey Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>I CARE FIRST</fullName>
            </value>
            <value>
                <fullName>I CAN DO</fullName>
            </value>
            <value>
                <fullName>I GIVE OPTIONS</fullName>
            </value>
            <value>
                <fullName>I OWN OUTCOMES</fullName>
            </value>
            <value>
                <fullName>BONUS POINTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>