News UAT/force-app/main/default/objects/Survey_Question__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Select--Vertical</fullName>
            </value>
            <value>
                <fullName>Single Select--Horizontal</fullName>
            </value>
            <value>
                <fullName>Multi-Select--Vertical</fullName>
            </value>
            <value>
                <fullName>Free Text</fullName>
            </value>
            <value>
                <fullName>Single Select-Vertical-Weighted</fullName>
            </value>
            <value>
                <fullName>Single Select-Horizontal-Weighted</fullName>
            </value>
            <value>
                <fullName>True/False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>