News UAT/force-app/main/default/objects/Survey_Question__c/validationRules/CantChangeTypeOnceReivedResponse.validationRule-meta.xml
<ValidationRule>
    <fullName>CantChangeTypeOnceReivedResponse</fullName>
    <active>true</active>
    <description>Can&#39;t change the type once a response has been recorded</description>
    <errorConditionFormula>IF(
AND(
TEXT(Type__c) != TEXT(PRIORVALUE(Type__c)),
Total_Responses__c &gt; 0),
TRUE,FALSE)</errorConditionFormula>
    <errorMessage>This question has received responses and so the type cannot be changed. To change the type please have an administrator delete all of the prior responses first otherwise delete this question and create a new one.</errorMessage>
</ValidationRule>