News UAT/force-app/main/default/objects/Survey_Question__c/validationRules/PreventBonusSectionChangeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventBonusSectionChangeValidation</fullName>
    <active>true</active>
    <description>IF section has change and total responses is more than 0 and (if old value is bonus section or if new value is bonus section)</description>
    <errorConditionFormula>IF(
AND(
ISCHANGED( SurveySection__c ),
Total_Responses__c &gt; 0,
OR(
TEXT(PRIORVALUE(SurveySection__c)) = &quot;BONUS POINTS&quot;,
TEXT(SurveySection__c) = &quot;BONUS POINTS&quot;
)
),
true,false
)</errorConditionFormula>
    <errorMessage>This question has received responses and so the section cannot be changed to or from Bonus Points. To change the section please have an administrator delete all of the prior responses first otherwise delete this question and create a new one.</errorMessage>
</ValidationRule>